Bug 446852 - Launching Kate with a document opens it in a new session rather than appending it to the last-used session
Summary: Launching Kate with a document opens it in a new session rather than appendin...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-11 21:52 UTC by Nate Graham
Modified: 2025-03-12 15:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-12-11 21:52:23 UTC
STEPS TO REPRODUCE
1. Open Kate
2. Open three documents
3. Quit Kate
4. Open a text document that will launch Kate using Dolphin


OBSERVED RESULT
Kate launches but shows only the document you just opened, starting a new blank session with it.


EXPECTED RESULT
Kate launches with the previous session and appends the newly-opened document to it.
Comment 1 funny0facer 2024-06-03 22:02:17 UTC
I can confirm this behavior. Of course this only feels like a bug when the setting "Session/Application Startup Behavior" equals to "Load last used session"

Operating System: Arch Linux 
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Kate Version: 24.05.0
Comment 2 Bug Janitor Service 2025-03-08 16:54:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1749
Comment 3 Christoph Cullmann 2025-03-10 17:55:29 UTC
Git commit 939845f49143eeb9eeeeb02e807bb87754d6667d by Christoph Cullmann.
Committed on 10/03/2025 at 17:47.
Pushed by cullmann into branch 'master'.

only start session if we are not started from the terminal or if no are files specified

M  +6    -1    apps/lib/kateapp.cpp

https://invent.kde.org/utilities/kate/-/commit/939845f49143eeb9eeeeb02e807bb87754d6667d
Comment 4 Christoph Cullmann 2025-03-12 15:45:51 UTC
Git commit e86d6074cbf7ea6834e6a45d0d1c6ff50d3cb4bb by Christoph Cullmann.
Committed on 12/03/2025 at 15:45.
Pushed by cullmann into branch 'release/25.04'.

only start session if we are not started from the terminal or if no are files specified


(cherry picked from commit 939845f49143eeb9eeeeb02e807bb87754d6667d)

Co-authored-by: Christoph Cullmann <christoph@cullmann.io>

M  +6    -1    apps/lib/kateapp.cpp

https://invent.kde.org/utilities/kate/-/commit/e86d6074cbf7ea6834e6a45d0d1c6ff50d3cb4bb