only start session if we are not started from the terminal or if no are files specified

BUG: 446852